<resources>
    <string name="app_name">Reserves</string>
    <string name="welcome_text">Bienvenido a Reservas Medicas</string>
    <string name="email_example">email@email.com</string>
    <string name="password_example">password</string>
    <string name="login_text">INICIAR SESIÓN</string>
    <string name="create_account_text">No tengo cuenta</string>
    <string name="create_account_button">CREAR CUENTA</string>
    <string name="register">REGISTRARME</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="document">Documento</string>
    <string name="phoneNumber">Teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="invalidName">Nombre invalido, reingrese por favor</string>
    <string name="invalidSurname">Apellido invalido, reingrese por favor</string>
    <string name="invalidEmail">Correo invalido, reingrese por favor</string>
    <string name="invalidPassword">La contraseña debe contener al menos 6 caracteres</string>
    <string name="invalidPhone">Teléfono invalido, reingrese por favor</string>
    <string name="invalidDocument">Ingrese su documento de identidad sin puntos ni guiones</string>
    <string name="errorRegisteringUser">Ocurrió un error y no se pudo registrar la cuenta</string>
    <string name="cancel">Cancelar</string>
    <string name="loginMessage">Iniciar Sesión</string>
    <string name="errorLoginUser">Valide los datos ingresados</string>
    <string name="SearchText">Buscar</string>
    <string name="scheduleText">Reservar</string>
    <string name="specialty">Especialidad</string>
    <string name="date">20/08/2020</string>
    <string name="scheduleInfo">Reserva para el doctor: </string>
    <string name="scheduleSuccessMessage">La reserva se ha realizado con exito</string>
    <string name="scheduleFailedMessage">No se pudo realizar la reserva. Valide que la fecha ingresada es mayor a la fecha actual</string>
    <string name="locationPermisionDenied">Permiso denegado. No se podra agregar su ubicación a la reserva</string>
    <string name="coordsErrorMessage">No se pudo obtener las coordenadas</string>
    <string name="addPhotoButton">Agregar foto de Dr.</string>
    <string name="errorUpdateingImage">Error al actualizar imagen del doctor</string>
    <string name="imageUpdated">La imagen a sido actualizada con exito</string>
</resources>