<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">
    tools:context=".ScheduleActivity">
    <TextView
        android:id="@+id/appointmentMessage"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scheduleText"
        android:textColor="#2196F3"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scheduleDoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/scheduleInfo"
        tools:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/appointmentMessage"
        />

    <TextView
        android:id="@+id/doctorInfo"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/scheduleDoctor"
        android:text="@string/name"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="date"
        tools:text="@string/date"
        tools:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/scheduleDoctor"
        />
    <Button
        android:id="@+id/appointmentButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="RESERVAR"
        android:layout_below="@id/date"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:datePickerMode="calendar"
        android:calendarViewShown="false"
        android:layout_below="@id/appointmentButton"/>

</RelativeLayout>